data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1837.wast
;; 8. **Mutable Br Stack Overflow**:    - Define a deeply nested block structure that leads to multiple nested `br` instructions targeting various block depths.    - Test if the implementation correctly manages the branching to avoid stack overflow due to incorrect labels and depth mismanagement.

(assert_invalid
  (module (func $deep-nesting-br-stack-overflow
    (block (result i32) 
      (block 
        (block 
          (block 
            (block 
              (block 
                (block 
                  (block 
                    (block 
                      (block 
                        (block 
                          (block 
                            (block 
                              (block 
                                (block 
                                  (block 
                                    (br 14)
                                  )
                                )
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    ))
  )
  "type mismatch"
)